--- a/templates/products.html
+++ b/templates/products.html
@@ -39,7 +39,10 @@
             <td>{{ product.unitprice }}</td>
             <td>
                 <a href="{{ url_for('edit_product', id=product.id) }}">編集</a>
-            </td>
+                <form action="{{ url_for('delete_product', id=product.id) }}" method="POST" style="display:inline;">
+                    <button type="submit" onclick="return confirm('本当に削除しますか？');">削除</button>
+                </form>
+            </td>           
         </tr>
         {% endfor %}
     </table>
